# wallet-risk-scorer-ML

./: .gitignore  README.md  fetch-scam-dataset.py  fetch_token_transfers.py  main.py  pyproject.toml  scam-token-transfer-dataset.csv
data/: new-online-addresses-token-transfer-dataset.csv  new_addresses_dataset.csv  new_online_addresses.csv  safe-token-transfer-dataset.csv  safe_dataset.csv  safe_wallets.csv  scam_dataset.csv  scam_dataset2.csv
models/: xgboost_optimized_v4.joblib  xgboost_optimized_v5.joblib  xgboost_scam_detection_v3.joblib
src/risk_scorer/: config.py  debug_model.py  main.py  model_testing.py  testing_online_model.py
src/risk_scorer/data_collection/: fetch_addresses_flag.py  fetch_missing_scam.py  fetch_new_addresses_dataset.py  fetch_new_addresses_token_transfers.py  fetch_safe_dataset.py  fetch_safe_token_transfers.py  fetch_safe_wallets.py  fetch_scam_dataset.py  fetch_scam_token_transfers.py  fetch_testing_wallets.py
src/utils/: fetch_data_functions.py
