[project]
name = "wallet-risk-scorer"
version = "0.1.0"
description = "ML project to score wallet risk based on transaction history"
dependencies = [
    "pandas",
    "scikit-learn",
    "python-dotenv",
    "requests"
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
